Migration. Console command. Parser api from file & kinopoisk

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,8 @@
-// Fonts
-//@import url('https://fonts.googleapis.com/css?family=Nunito');
-
+// Fonts bootstrap-icon
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+// Bootstrap 5
+@import "~bootstrap/scss/bootstrap";
 // Variables
-//@import 'variables';
+@import 'variables';
 
-// Bootstrap
-//@import '~bootstrap/scss/bootstrap';
+
