--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12236,6 +12236,11 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+html, body {
+  min-height: 100vh;
+}
+
 #app {
   position: relative;
+  min-height: 100vh;
 }
